--- a/PidaClumetic/app/build.gradle
+++ b/PidaClumetic/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     implementation 'com.google.api-client:google-api-client-android:1.23.0' exclude module: 'httpclient'
     implementation 'com.google.http-client:google-http-client-gson:1.23.0' exclude module: 'httpclient'
     implementation 'com.google.apis:google-api-services-vision:v1-rev369-1.23.0'
+    implementation 'com.github.bootpay:client_android_java:2.143'
 }
